// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> should render properly with an error 1`] = `
.emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-5 {
  color: #c92300;
  font-style: italic;
}

<div
  className="emotion-0"
>
  <label
    className="emotion-1"
    htmlFor="username"
  >
    Email
  </label>
  <div
    className="emotion-2"
  >
    <textarea
      autoFocus={true}
      className="emotion-3"
      id="username"
      name="username"
      onChange={[Function]}
      rows="5"
      value="foo@bar.baz"
    />
  </div>
  <div
    className="emotion-0"
  >
    <span
      className="emotion-5"
    >
      Error
    </span>
     
  </div>
</div>
`;

exports[`<Textarea /> should render properly with no error 1`] = `
.emotion-0 {
  padding-top: 8px;
}

.emotion-1 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-3 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

<div
  className="emotion-0"
>
  <label
    className="emotion-1"
    htmlFor="username"
  >
    Email
  </label>
  <div
    className="emotion-2"
  >
    <textarea
      autoFocus={true}
      className="emotion-3"
      id="username"
      name="username"
      onChange={[Function]}
      rows="5"
      value="foo@bar.baz"
    />
  </div>
  <div
    className="emotion-0"
  >
     
  </div>
</div>
`;
